corrections du code sur l'ensemble du responsive

--- a/menu-delice.html
+++ b/menu-delice.html
@@ -41,7 +41,7 @@
                     <div class="cards-menu cards-entree-animation-1">
                         <h3>Tartare de thon</h3>
                         <div class="flex-plat-prix">
-                            <p>Assaisonné au yuzu</p>
+                            <p class="color-grey-p-menu">Assaisonné au yuzu</p>
                             <p class="p-prix">25€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -50,7 +50,7 @@
                     <div class="cards-menu cards-entree-animation-2">
                         <h3 class="text-ellipsis">Bouchée de homard croustillant</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Et sa farandole de petits légumes</p>
+                            <p class="text-ellipsis color-grey-p-menu">Et sa farandole de petits légumes</p>
                             <p class="p-prix">35€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -59,7 +59,7 @@
                     <div class="cards-menu cards-entree-animation-3" >
                         <h3>Velouté de cèpes</h3>
                         <div class="flex-plat-prix">
-                            <p>Aux truffes</p>
+                            <p class="color-grey-p-menu">Aux truffes</p>
                             <p class="p-prix">20€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -67,9 +67,9 @@
 
                     <h3 class="border-title-menu">PLATS</h3>
                     <div class="cards-menu cards-plat-animation-1">
-                        <h3 class="text-ellipsis">Poulet rôti aux herbes de Provence</h3>
+                        <h3 class="text-ellipsis" id="providence-overflow">Poulet rôti aux herbes de Provence</h3>
                         <div class="flex-plat-prix">
-                            <p>Et sa crème de truffe</p>
+                            <p class="color-grey-p-menu">Et sa crème de truffe</p>
                             <p class="p-prix">40€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -78,7 +78,7 @@
                     <div class="cards-menu cards-plat-animation-2">
                         <h3>Langouste rôtie</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Et ses légumes de saison</p>
+                            <p class="text-ellipsis color-grey-p-menu">Et ses légumes de saison</p>
                             <p class="p-prix">35€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -87,7 +87,7 @@
                     <div class="cards-menu cards-plat-animation-3">
                         <h3>Côte de boeuf Angus</h3>
                         <div class="flex-plat-prix">
-                            <p>Et sa purée de panais</p>
+                            <p class="color-grey-p-menu">Et sa purée de panais</p>
                             <p class="p-prix">44€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -97,7 +97,7 @@
                     <div class="cards-menu cards-dessert-animation-1">
                         <h3>Farandole de desserts</h3>
                         <div class="flex-plat-prix">
-                            <p>Du chef</p>
+                            <p class="color-grey-p-menu">Du chef</p>
                             <p class="p-prix">18€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -106,7 +106,7 @@
                     <div class="cards-menu cards-dessert-animation-2">
                         <h3>Crème brulée</h3>
                         <div class="flex-plat-prix">
-                            <p>Revisitée</p>
+                            <p class="color-grey-p-menu">Revisitée</p>
                             <p class="p-prix">22€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -115,7 +115,7 @@
                     <div class="cards-menu cards-dessert-animation-3">
                         <h3>Tiramisu</h3>
                         <div class="flex-plat-prix">
-                            <p>À la noisette</p>
+                            <p class="color-grey-p-menu">À la noisette</p>
                             <p class="p-prix">23€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
