--- a/menu-enchantee.html
+++ b/menu-enchantee.html
@@ -41,7 +41,7 @@
                     <div class="cards-menu cards-entree-animation-1">
                         <h3>Ravioles de foie gras</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Accompagnés de leur crème à la truffe</p>
+                            <p class="text-ellipsis color-grey-p-menu">Accompagnés de leur crème à la truffe</p>
                             <p class="p-prix">25€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -50,7 +50,7 @@
                     <div class="cards-menu cards-entree-animation-2">
                         <h3>Caviar osciètre</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Sur blini à la farine de blé noir</p>
+                            <p class="text-ellipsis color-grey-p-menu">Sur blini à la farine de blé noir</p>
                             <p class="p-prix">35€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -59,7 +59,7 @@
                     <div class="cards-menu cards-entree-animation-3" >
                         <h3 class="text-ellipsis">Homard et espuma de potiron</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Mariné aux zestes d'orange</p>
+                            <p class="text-ellipsis color-grey-p-menu">Mariné aux zestes d'orange</p>
                             <p class="p-prix">20€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -68,7 +68,7 @@
                     <div class="cards-menu cards-entree-animation-4" >
                         <h3 class="text-ellipsis">Foie gras de canard cuit entier</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Confiture de figue et pain toasté</p>
+                            <p class="text-ellipsis color-grey-p-menu">Confiture de figue et pain toasté</p>
                             <p class="p-prix">35€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -78,7 +78,7 @@
                     <div class="cards-menu cards-plat-animation-1">
                         <h3 class="text-ellipsis">Noix de coquilles Saint-Jacques</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Sur lit de purée de céleri-rave</p>
+                            <p class="text-ellipsis color-grey-p-menu">Sur lit de purée de céleri-rave</p>
                             <p class="p-prix">40€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -87,7 +87,7 @@
                     <div class="cards-menu cards-plat-animation-2">
                         <h3>Langoustine poêlée</h3>
                         <div class="flex-plat-prix">
-                            <p>Purée de patate douce</p>
+                            <p class="color-grey-p-menu">Purée de patate douce</p>
                             <p class="p-prix">35€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -96,7 +96,7 @@
                     <div class="cards-menu cards-plat-animation-3">
                         <h3 class="text-ellipsis">Mijoté de queue de boeuf</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Et riz sauvage aux zests de citron</p>
+                            <p class="text-ellipsis color-grey-p-menu">Et riz sauvage aux zests de citron</p>
                             <p class="p-prix">44€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -106,7 +106,7 @@
                     <div class="cards-menu cards-dessert-animation-1">
                         <h3 class="text-ellipsis">Macaron noisette et chocolat</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Glace au caramel brun et sel de Guérande</p>
+                            <p class="text-ellipsis color-grey-p-menu">Glace au caramel brun et sel de Guérande</p>
                             <p class="p-prix">18€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -115,7 +115,7 @@
                     <div class="cards-menu cards-dessert-animation-2">
                         <h3>Baba au rhum revisité</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Avec son coulis de citron</p>
+                            <p class="text-ellipsis color-grey-p-menu">Avec son coulis de citron</p>
                             <p class="p-prix">22€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -124,7 +124,7 @@
                     <div class="cards-menu cards-dessert-animation-3">
                         <h3 class="text-ellipsis">Tarte au citron meringuée</h3>
                         <div class="flex-plat-prix">
-                            <p>Déstructurée</p>
+                            <p class="color-grey-p-menu">Déstructurée</p>
                             <p class="p-prix">23€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
