--- a/menu-francaise.html
+++ b/menu-francaise.html
@@ -41,7 +41,7 @@
                     <div class="cards-menu cards-entree-animation-1">
                         <h3 class="text-ellipsis">Tartare de poulpe acidulé</h3>
                         <div class="flex-plat-prix">
-                            <p>Aux zests d'orange</p>
+                            <p class="color-grey-p-menu">Aux zests d'orange</p>
                             <p class="p-prix">25€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -50,7 +50,7 @@
                     <div class="cards-menu cards-entree-animation-2">
                         <h3 class="text-ellipsis">Velouté de légumes d'antan</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Carotte, panais, topinambour</p>
+                            <p class="text-ellipsis color-grey-p-menu">Carotte, panais, topinambour</p>
                             <p class="p-prix">35€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -59,7 +59,7 @@
                     <div class="cards-menu cards-entree-animation-3" >
                         <h3>Soupe à l'oignon</h3>
                         <div class="flex-plat-prix">
-                            <p>Revisitée</p>
+                            <p class="color-grey-p-menu">Revisitée</p>
                             <p class="p-prix">20€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -69,7 +69,7 @@
                     <div class="cards-menu cards-plat-animation-1">
                         <h3>Coquilles Saint-Jacques</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Accompagnées d'une purée de panais</p>
+                            <p class="text-ellipsis color-grey-p-menu">Accompagnées d'une purée de panais</p>
                             <p class="p-prix">40€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -78,7 +78,7 @@
                     <div class="cards-menu cards-plat-animation-2">
                         <h3>Magret de canard</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Et parmentier de pommes de terres</p>
+                            <p class="text-ellipsis color-grey-p-menu">Et parmentier de pommes de terres</p>
                             <p class="p-prix">35€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -87,7 +87,7 @@
                     <div class="cards-menu cards-plat-animation-3">
                         <h3 class="text-ellipsis">Pigeonneau d'Ille-et-Vilaine</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Sur son lit de gnocchis aux légumes</p>
+                            <p class="text-ellipsis color-grey-p-menu">Sur son lit de gnocchis aux légumes</p>
                             <p class="p-prix">44€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -97,7 +97,7 @@
                     <div class="cards-menu cards-dessert-animation-1">
                         <h3 class="text-ellipsis">Pétales de violettes glacés</h3>
                         <div class="flex-plat-prix">
-                            <p>Et purée de noisettes</p>
+                            <p class="color-grey-p-menu">Et purée de noisettes</p>
                             <p class="p-prix">18€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -106,7 +106,7 @@
                     <div class="cards-menu cards-dessert-animation-2">
                         <h3>Fondant au chocolat</h3>
                         <div class="flex-plat-prix">
-                            <p>Revisité</p>
+                            <p class="color-grey-p-menu">Revisité</p>
                             <p class="p-prix">22€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -115,7 +115,7 @@
                     <div class="cards-menu cards-dessert-animation-3">
                         <h3>Millefeuille croustillant</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Myrtilles et pâte d'amande</p>
+                            <p class="text-ellipsis color-grey-p-menu">Myrtilles et pâte d'amande</p>
                             <p class="p-prix">23€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
