--- a/menu-palette.html
+++ b/menu-palette.html
@@ -37,11 +37,11 @@
 
             <div class="cards-menus-responsive">
                 <div class="card-primary">
-                    <h3 class="border-title-menu">ENTRÉES</h3>
+                    <h3 class="border-title-menu color-grey-p-menu">ENTRÉES</h3>
                     <div class="cards-menu cards-entree-animation-1">
                         <h3>Fricassée d'escargot</h3>
                         <div class="flex-plat-prix">
-                            <p>Au piment d'Espelette</p>
+                            <p class="color-grey-p-menu">Au piment d'Espelette</p>
                             <p class="p-prix">25€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -50,7 +50,7 @@
                     <div class="cards-menu cards-entree-animation-2">
                         <h3 class="text-ellipsis">Foie gras de canard mi-cuit</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Et ses copeaux de truffe noire</p>
+                            <p class="text-ellipsis color-grey-p-menu">Et ses copeaux de truffe noire</p>
                             <p class="p-prix">35€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -59,17 +59,17 @@
                     <div class="cards-menu cards-entree-animation-3" >
                         <h3>Oeuf au plat</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Assaisonné à la truffe sur lit de caviar</p>
+                            <p class="text-ellipsis color-grey-p-menu">Assaisonné à la truffe sur lit de caviar</p>
                             <p class="p-prix">20€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
                     </div>
 
-                    <h3 class="border-title-menu">PLATS</h3>
+                    <h3 class="border-title-menu color-grey-p-menu">PLATS</h3>
                     <div class="cards-menu cards-plat-animation-1">
                         <h3 class="text-ellipsis">Filet de boeuf aux herbes</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Accompagné de sa ribambelle de légumes</p>
+                            <p class="text-ellipsis color-grey-p-menu">Accompagné de sa ribambelle de légumes</p>
                             <p class="p-prix">40€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -78,7 +78,7 @@
                     <div class="cards-menu cards-plat-animation-2">
                         <h3 class="text-ellipsis">Parmentier de queue de boeuf</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">À la truffe noire sur sa purée de panais</p>
+                            <p class="text-ellipsis color-grey-p-menu">À la truffe noire sur sa purée de panais</p>
                             <p class="p-prix">35€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -87,17 +87,17 @@
                     <div class="cards-menu cards-plat-animation-3">
                         <h3>Filet de turbot</h3>
                         <div class="flex-plat-prix">
-                            <p>Aux agrumes</p>
+                            <p class="color-grey-p-menu">Aux agrumes</p>
                             <p class="p-prix">44€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
                     </div>
 
-                    <h3 class="border-title-menu">DESSERTS</h3>
+                    <h3 class="border-title-menu color-grey-p-menu">DESSERTS</h3>
                     <div class="cards-menu cards-dessert-animation-1">
                         <h3>Paris-Brest</h3>
                         <div class="flex-plat-prix">
-                            <p>Revisité</p>
+                            <p class="color-grey-p-menu">Revisité</p>
                             <p class="p-prix">18€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -106,7 +106,7 @@
                     <div class="cards-menu cards-dessert-animation-2">
                         <h3 class="text-ellipsis">Macaron au chocolat d'exception</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Et glace à la vanille de Madagascar</p>
+                            <p class="text-ellipsis color-grey-p-menu">Et glace à la vanille de Madagascar</p>
                             <p class="p-prix">22€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
@@ -115,7 +115,7 @@
                     <div class="cards-menu cards-dessert-animation-3">
                         <h3>Mousse au chocolat</h3>
                         <div class="flex-plat-prix">
-                            <p class="text-ellipsis">Au piment d'Espelette et à la truffe noire</p>
+                            <p class="text-ellipsis color-grey-p-menu">Au piment d'Espelette et à la truffe noire</p>
                             <p class="p-prix">23€</p>
                             <div class="green-box"><i class="fas fa-check-circle"></i></div>
                         </div>
