corrections responsive petit écran

--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
                 <div class="fonctionnement-1">
                     <p class="rounded-number">1</p>
                     <p class="position-icon-fontawesome"><i class="fas fa-mobile-alt"></i></p>
-                    <p>Choisissez un restaurant</p>
+                    <p class="margin-p-petitecran">Choisissez un restaurant</p>
                 </div>
                 <div class="fonctionnement-2">
                     <p class="rounded-number">2</p>
                     <p class="position-icon-fontawesome"><i class="fas fa-list-ul"></i></p>
-                    <p>Composez votre menu</p>
+                    <p class="margin-p-petitecran">Composez votre menu</p>
                 </div>
                 <div class="fonctionnement-3">
                     <p class="rounded-number">3</p>
                     <p class="position-icon-fontawesome"><i class="fas fa-store"></i></p>
-                    <p class="margin-left-p">Dégustez au restaurant</p>
+                    <p class="margin-left-p margin-p-petitecran">Dégustez au restaurant</p>
                 </div>
             </div>
         </main>
